--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
+html{
+  font-size: 10px;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: rgb(244, 244, 244);
+  color:#333
+}
+p{
+  font-size: 1.6rem;
+}
+small{
+  font-size: 1.2rem;
+}
+.container{
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 40px;
+
+}
+.title{
+  font-size: 4.4rem;
   text-align: center;
 }
+.form{
+  display: grid;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.label-search{
+  font-size: 1.2rem;
+  margin-bottom: 0.2rem;
+  text-transform: uppercase;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.input{
+  font-size: 1.6rem;
+  padding: 0.5rem 2 rem;
+  line-height: 2.8rem;
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  margin-bottom: 1 rem;
+}
+.btn-search{
+  background-color: rgb(0, 0, 0,0.75);
   color: white;
+  padding: 1rem 2rem;
+  border: 1px solid rgb(0, 0, 0,0.75);
+  border-radius: 20px;
+  font-size: 1.4rem;
+  cursor: pointer;
+  transition:background-color 250ms;
+
+}
+.btn-search:hover{
+  background-color:rgb(0, 0, 0,0.85) ;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width:786px){
+  .form{
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 1rem;
+    align-items: center;
+  }
+  .input{
+    margin-bottom: 0;
+  }
 }
+.card{
+  padding: 2rem 4rem;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.25);
+    margin-bottom: 2rem;
+    background-color: white;
+}
+.card-image{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 0 auto;
+  display: block;
+}
+.card-list{
+  margin-top: 4rem;
+}
+.card-title{
+  margin-bottom: 0.5rem;
+  font-size: 3.2rem;
 }
